--- a/BudgetAllowance/app/src/main/res/values/strings.xml
+++ b/BudgetAllowance/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Budget Allowance</string>
     <string name="action_settings">Settings</string>
     <string name="moneyLeft">0</string>
+    <string name="title_activity_new_payment">newPayment</string>
 </resources>
