--- a/BudgetAllowance/app/src/main/res/values/strings.xml
+++ b/BudgetAllowance/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Budget Allowance</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_showPastPayments">Past Payments</string>
     <string name="moneyLeft">0</string>
     <string name="title_activity_new_payment">newPayment</string>
+    <string name="paymentDesc">Payment Description</string>
+    <string name="paymentValue">Value</string>
 </resources>
