added spinner options

--- a/BudgetAllowance/app/src/main/res/values/strings.xml
+++ b/BudgetAllowance/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="title_activity_new_payment">newPayment</string>
     <string name="paymentDesc">Payment Description</string>
     <string name="paymentValue">Value</string>
+    <string-array name="allowanceTimeOptions">
+        <item>Daily</item>
+        <item>Weekly</item>
+        <item>Monthly</item>
+    </string-array>
 </resources>
